# skulpin

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: glfw_renderer_only.rs  hello_skulpin.rs  hello_skulpin_sdl2.rs  hello_skulpin_winit.rs  hello_skulpin_winit_app.rs  interactive.rs  interactive_sdl2.rs  interactive_winit_app.rs  physics.rs  renderer_only.rs  sdl2_renderer_only.rs  skulpin_app.rs  winit_imgui.rs  winit_renderer_only.rs
examples/imgui_support/: imgui_renderpass.rs  mod.rs
shaders/: imgui.frag  imgui.frag.spv  imgui.vert  imgui.vert.spv  skia.frag  skia.frag.spv  skia.vert  skia.vert.spv
skulpin-app-winit/: Cargo.toml
skulpin-app-winit/src/: app.rs  input_state.rs  lib.rs  time_state.rs  util.rs
skulpin-plugin-imgui/: Cargo.toml
skulpin-plugin-imgui/src/: image.rs  imgui_renderpass.rs  lib.rs
skulpin-renderer/: Cargo.toml
skulpin-renderer-glfw/: Cargo.toml
skulpin-renderer-glfw/src/: lib.rs
skulpin-renderer-sdl2/: Cargo.toml
skulpin-renderer-sdl2/src/: lib.rs
skulpin-renderer-winit/: Cargo.toml
skulpin-renderer-winit/src/: lib.rs
skulpin-renderer/shaders/: compile_shaders.bat  skia.vert  skia.vert.spv
skulpin-renderer/shaders/glsl/: skia.frag  skia.glsl
skulpin-renderer/src/: alignment.rs  buffer.rs  coordinates.rs  device.rs  instance.rs  lib.rs  renderer.rs  skia_renderpass.rs  skia_support.rs  swapchain.rs  window_support.rs
skulpin-renderer/src/skia_support/: metal.rs  mod.rs
src/: lib.rs  winit_input_handler.rs
src/app/: app.rs  app_control.rs  input_state.rs  mod.rs  time_state.rs  util.rs  winit_input_handler.rs
src/renderer/: alignment.rs  buffer.rs  coordinates.rs  debug_reporter.rs  device.rs  image.rs  imgui_pipeline.rs  imgui_renderpass.rs  imgui_support.rs  instance.rs  mod.rs  renderer.rs  skia_pipeline.rs  skia_renderpass.rs  skia_support.rs  swapchain.rs  util.rs  window_support.rs
src/renderer/window_support/: mod.rs  sdl2_support.rs  winit_support.rs
