[workspace]
members = [
    "skulpin-renderer",
    "skulpin-app-winit",
]

[package]
name = "skulpin"
version = "0.11.2"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides an easy option for drawing hardware-accelerated 2D by combining Vulkan and Skia."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "shaders/*.frag",
    "shaders/*.vert",
    "shaders/*.spv",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md"
]

# Minimum required rust version:
# rust="1.40"

# NOTE: See README.md for implications on how feature selection will affect build-time. As of this writing, binary
# builds of skia are available for ALL of the features or NONE of the features. Only selecting some of the features will
# require building skia from scratch, which will greatly increase build times
[features]
# svg and shaper are deprecated. svg is always available, and shaper is included with textlayout. However, leaving them
# since skia_safe prints informative error messages.
skia_shaper = ["skulpin-renderer/shaper"]
skia_svg = ["skulpin-renderer/svg"]
skia_textlayout = ["skulpin-renderer/textlayout"]
skia_complete = ["skulpin-renderer/complete"]

winit_app = ["skulpin-app-winit"]
winit-21 = ["skulpin-app-winit/winit-21"]
winit-22 = ["skulpin-app-winit/winit-22"]
winit-23 = ["skulpin-app-winit/winit-23"]
winit-24 = ["skulpin-app-winit/winit-24"]
winit-latext = ["skulpin-app-winit/winit-latest"]

default = ["skia_complete", "winit_app", "winit-24"]

[dependencies]
skulpin-renderer = { version = "0.12.0", path = "skulpin-renderer" }
skulpin-app-winit = { version = "0.12.0", path = "skulpin-app-winit", optional = true }

log="0.4"

[dev-dependencies]
env_logger = "0.6"

# These are used for the physics demo only
rapier2d = "0.5"

# The skulpin-renderer-sdl2 crate doesn't specify any features, but downstream libraries can do so by including sdl2
# for themselves. Examples will use the features added here
sdl2-sys = { version = ">=0.33, <=0.34.2"}
sdl2 = { version = ">=0.33,<0.34.3", features = ["bundled", "static-link", "raw-window-handle"] }
