[workspace]
members = [
    "skulpin-renderer",
    "skulpin-app-winit",
]

[package]
name = "skulpin"
version = "0.14.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "This crate provides an easy option for drawing hardware-accelerated 2D by combining Vulkan and Skia."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "shaders/*.frag",
    "shaders/*.vert",
    "shaders/*.spv",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md"
]

# Minimum required rust version:
# rust="1.40"

# NOTE: See README.md for implications on how feature selection will affect build-time. As of this writing, binary
# builds of skia are available for ALL of the features or NONE of the features. Only selecting some of the features will
# require building skia from scratch, which will greatly increase build times
[features]
# svg and shaper are deprecated. svg is always available, and shaper is included with textlayout. However, leaving them
# since skia_safe prints informative error messages.
skia-shaper = ["skulpin-renderer/shaper"]
skia-svg = ["skulpin-renderer/svg"]
skia-textlayout = ["skulpin-renderer/textlayout"]
skia-complete = ["skulpin-renderer/complete"]

winit-app = ["skulpin-app-winit"]
winit-21 = ["skulpin-app-winit/winit-21"]
winit-22 = ["skulpin-app-winit/winit-22"]
winit-23 = ["skulpin-app-winit/winit-23"]
winit-24 = ["skulpin-app-winit/winit-24"]
winit-25 = ["skulpin-app-winit/winit-25"]
winit-latest = ["skulpin-app-winit/winit-latest"]

default = []

[dependencies]
skulpin-renderer = { version = "0.14.1", path = "skulpin-renderer" }
skulpin-app-winit = { version = "0.14.1", path = "skulpin-app-winit", optional = true }

log="0.4"

[dev-dependencies]
env_logger = "0.6"

# These are used for the physics demo only
rapier2d = "0.5"

# The skulpin-renderer-sdl2 crate doesn't specify any features, but downstream libraries can do so by including sdl2
# for themselves. Examples will use the features added here
sdl2-sys = { version = ">=0.33, <=0.34.2"}
sdl2 = { version = ">=0.33,<0.34.3", features = ["bundled", "static-link", "raw-window-handle"] }

# Cf. MFEK/skulpin.rlib#2 and aclysma/rafx#180.
[profile.dev.package.rafx]
debug-assertions = false
opt-level = 3

[[example]]
name = "hello_skulpin_sdl2"
required-features = []

[[example]]
name = "hello_skulpin_winit"
required-features = ["winit-app", "winit-25"]

[[example]]
name = "hello_skulpin_winit_app"
required-features = ["winit-app", "winit-25"]

[[example]]
name = "interactive_sdl2"
required-features = []

[[example]]
name = "interactive_winit_app"
required-features = ["winit-app", "winit-25"]

[[example]]
name = "physics"
required-features = ["winit-app", "winit-25"]

