[package]
name = "skulpin-app-winit"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin-renderer = { path = "../skulpin-renderer" }
skulpin-renderer-winit = { path = "../skulpin-renderer-winit" }

log="0.4"