[package]
name = "skulpin-app-winit"
version = "0.4.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "A winit-based application layer for skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin-renderer = { version = "0.4", path = "../skulpin-renderer" }
skulpin-renderer-winit = { version = "0.4", path = "../skulpin-renderer-winit" }

log="0.4"

[features]
winit-21 = []
winit-22 = []
winit-23 = []
winit-latest = []
