[package]
name = "skulpin-plugin-imgui"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin-renderer = { version = "0.1", path = "../skulpin-renderer" }
imgui = "0.3.0"
log = "0.4"