[package]
name = "skulpin-renderer-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
skulpin-renderer = { path = "../skulpin-renderer" }

sdl2 = { version = ">=0.33" }

log="0.4"
