[package]
name = "skulpin-renderer-sdl2"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Support for sdl2 in skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
skulpin-renderer = { version = "0.1", path = "../skulpin-renderer" }

sdl2 = { version = ">=0.33" }

log="0.4"
