[package]
name = "skulpin-renderer-sdl2"
version = "0.5.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Support for sdl2 in skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

[dependencies]
skulpin-renderer = { version = "0.5.1", path = "../skulpin-renderer" }
sdl2 = { version = ">=0.33, <=0.34.2", features = ["raw-window-handle"] }
sdl2-sys = { version = ">=0.33, <=0.34.2"}
ash-window = "0.5.0"
raw-window-handle = "0.3"
log="0.4"
