[package]
name = "skulpin-renderer-winit"
version = "0.3.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Support for winit in skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin-renderer = { version = "0.3", path = "../skulpin-renderer" }

winit = ">=0.21"
raw-window-handle = "0.3"

log="0.4"

# From ash example code
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.18"
cocoa = "0.20"
objc = "0.2"