[package]
name = "skulpin-renderer-winit"
version = "0.5.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "Support for winit in skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

[dependencies]
skulpin-renderer = { version = "0.5", path = "../skulpin-renderer" }
winit-21 = { package = "winit", version = "0.21", optional = true }
winit-22 = { package = "winit", version = "0.22", optional = true }
winit-23 = { package = "winit", version = "0.23", optional = true }
winit-latest = { package = "winit", version = ">=0.23", optional = true }
ash-window = "0.5.0"
raw-window-handle = "0.3"
log="0.4"
