[package]
name = "skulpin-renderer"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["complete"]
shaper = ["skia-safe/shaper"]
svg = ["skia-safe/svg"]
textlayout = ["skia-safe/textlayout"]
complete = ["skia-safe/shaper", "skia-safe/svg", "skia-safe/textlayout"]

[dependencies]
ash = "0.29"
skia-safe = { version = ">=0.21", features = ["vulkan"] }

log="0.4"

# From ash example code
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.19"
objc = "0.2"